`ExtendFunction` : merge different apply methods into one `apply` method.